--- a/src/assets/sass/overrides/_skins.scss
+++ b/src/assets/sass/overrides/_skins.scss
@@ -247,7 +247,6 @@ $sk-skin-btn-default: #293756;
     .btn {
         font-family: $font-family-sans-serif;
         cursor: pointer;
-        margin: 2px;
     }
     .btn-addon {
         flex-grow: 3;
@@ -309,6 +308,12 @@ $sk-skin-btn-default: #293756;
         border-radius: .4rem;
         border: 1px solid lighten($color-sidebar, 70%);
         text-indent: 1rem;
+    }
+    input[name=department],
+    input[name=employee] {
+        border-radius: 3rem;
+        text-align: center;
+        height: 3rem;
     }
     input[type="email"]:focus:not([readonly]),
     input[type="search"]:focus:not([readonly]),
@@ -515,7 +520,12 @@ $sk-skin-btn-default: #293756;
                     text-shadow: none;
                     cursor: pointer;
                     opacity: 1;
-                    
+                }
+                @media only screen and (max-width: 768px) {
+                    .d-flex {
+                        flex-direction: column;
+                        align-items: center;
+                    }
                 }
             }
         }
@@ -826,6 +836,12 @@ $sk-skin-btn-default: #293756;
             .picker--focused .picker__day--selected {
                 background-color: $color-nav;
             }
+            .picker__day.picker__day--today {
+                font-weight: 800;
+                color: $sk-skin-navbar;
+                background-color: #ddd;
+                border-radius: 8rem;
+            }
         }
         .picker__footer {
             text-align: right;
@@ -986,6 +1002,12 @@ $sk-skin-btn-default: #293756;
     .files .file-box:first-child {
         margin-top: 1rem;
     }
+    ///Remove columns for mobile
+    @media only screen and (max-width : 768px) {
+        .file-box .file-box-sty:nth-child(n+1) {
+            display: none;
+        }
+    }
     .tab-content {
         padding: 0;
     }
@@ -1052,8 +1074,17 @@ $sk-skin-btn-default: #293756;
         .profile-m-2 {
             margin-bottom: .5rem;
         }
-        .display-2, display-3 {
-            font-size: 2.5rem;
+        .display-2 {
+            font-size: 3rem;
+        }
+        .display-3 {
+            font-size: 3rem;
+        }
+        .btn.btn-lg {
+            padding: 1.5rem 2.9rem;
+        }
+        .btn {
+            margin: 6px;
         }
     }
     
