--- a/src/assets/sass/overrides/_skins.scss
+++ b/src/assets/sass/overrides/_skins.scss
@@ -1021,9 +1021,8 @@ $sk-skin-btn-default: #293756;
     
     
     @media only screen and (max-width: 768px) {
-        table 
-        .table,
-        tbody {
+        table.table:not(.picker tbody),
+        tbody:not(.picker tbody) {
             display: block;
             width: 100%;
             background-color: transparent;
@@ -1037,8 +1036,13 @@ $sk-skin-btn-default: #293756;
                 border-bottom: none;
                 margin-bottom: 0.4rem;
             }
-            th {
+            th:not(.picker__table) {
                 display: none;
+            }
+            a {
+                img {
+                    display: none;
+                }
             }
         }
         thead, th { 
@@ -1046,13 +1050,13 @@ $sk-skin-btn-default: #293756;
         }
         table tr,
         table th,
-        table td {
+        table td:not(.picker tbody) {
             display: block;
             padding: 0;
             text-align: left;
             white-space: normal;
         }
-        table tr {
+        table tr:not(.picker tbody) {
             border-bottom: 1px solid lighten($color-sidebar, 70%);
             padding-bottom: 11px;
             margin-bottom: 11px;
@@ -1092,6 +1096,7 @@ $sk-skin-btn-default: #293756;
         .icon-handler {
             margin: 0 auto;
             margin-top: 1rem;
+            width: 90px;
         }
         draggable {
             background-color: transparent;
