--- a/src/assets/sass/overrides/_skins.scss
+++ b/src/assets/sass/overrides/_skins.scss
@@ -1007,8 +1007,8 @@ $sk-skin-btn-default: #293756;
     }
     ///Remove columns for mobile
     @media only screen and (max-width : 768px) {
-        .file-box .file-box-sty:nth-child(n+1) {
-            display: none;
+        .files .file-box div {
+            display: none !important;
         }
     }
     .tab-content {
