--- a/src/assets/sass/overrides/_skins.scss
+++ b/src/assets/sass/overrides/_skins.scss
@@ -1014,7 +1014,41 @@ $sk-skin-btn-default: #293756;
     .tab-content {
         padding: 0;
     }
-    
+    ///Spinner
+    .loading-motion {
+
+    }
+    .spinner {
+        width: 40px;
+        height: 40px;
+        background-color: $sk-skin-accent;
+        margin: 0 auto;
+        -webkit-animation: sk-rotateplane 1.2s infinite ease-in-out;
+        animation: sk-rotateplane 1.2s infinite ease-in-out;
+    }
+    .spinner-text {
+        margin: .5rem auto;
+        text-align: center;
+        text-transform: uppercase;
+        font-size: .85rem;
+    }
+        @-webkit-keyframes sk-rotateplane {
+        0% { -webkit-transform: perspective(120px) }
+        50% { -webkit-transform: perspective(120px) rotateY(180deg) }
+        100% { -webkit-transform: perspective(120px) rotateY(180deg)  rotateX(180deg) }
+    }
+        @keyframes sk-rotateplane {
+        0% { 
+        transform: perspective(120px) rotateX(0deg) rotateY(0deg);
+        -webkit-transform: perspective(120px) rotateX(0deg) rotateY(0deg) 
+        } 50% { 
+        transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg);
+        -webkit-transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg) 
+        } 100% { 
+        transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
+        -webkit-transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
+        }
+    }
     
     
     
