--- a/src/assets/sass/_custom.scss
+++ b/src/assets/sass/_custom.scss
@@ -711,6 +711,22 @@ table td .color-grey {
     &:before {content: "\f08b";}
 }
 
+.icon-cost-approved {
+    &:hover {color: $success-color;}
+    &:hover::before {color: $success-color;}
+    &:before {content: "\f00c";}
+    color: $success-color;
+    font-weight: 800;
+}
+
+.icon-cost-rejected {
+    &:hover {color: $color-cancel;}
+    &:hover::before {color: $color-cancel;}
+    &:before {content: "\f00d";}
+    color: $color-cancel;
+    font-weight: 800;
+}
+
 .icon-assign {
     &:hover {color: $color-incomplete;}
     &:hover::before {color: $color-incomplete;}
