--- a/src/assets/sass/app.scss
+++ b/src/assets/sass/app.scss
@@ -130,5 +130,6 @@
 @import "node_modules/mdb-pro/sass/mdb/pro/sections/pricing";
 @import "node_modules/mdb-pro/sass/mdb/pro/sections/contacts";
 
+@import "node_modules/chartist/dist/scss/chartist.scss";
 
 @import "custom";
