--- a/src/assets/sass/app.scss
+++ b/src/assets/sass/app.scss
@@ -1,135 +1,138 @@
 @import "variables";
 
-@import "node_modules/bootstrap/scss/functions";
-@import "node_modules/bootstrap/scss/variables";
-@import "node_modules/bootstrap/scss/mixins";
-@import "node_modules/bootstrap/scss/print";
-@import "node_modules/bootstrap/scss/reboot";
-@import "node_modules/bootstrap/scss/type";
-@import "node_modules/bootstrap/scss/images";
-@import "node_modules/bootstrap/scss/code";
-@import "node_modules/bootstrap/scss/grid";
-@import "node_modules/bootstrap/scss/tables";
-@import "node_modules/bootstrap/scss/forms";
-@import "node_modules/bootstrap/scss/buttons";
-@import "node_modules/bootstrap/scss/transitions";
-@import "node_modules/bootstrap/scss/dropdown";
-@import "node_modules/bootstrap/scss/button-group";
-@import "node_modules/bootstrap/scss/input-group";
-@import "node_modules/bootstrap/scss/custom-forms";
-@import "node_modules/bootstrap/scss/nav";
-@import "node_modules/bootstrap/scss/navbar";
-@import "node_modules/bootstrap/scss/card";
-@import "node_modules/bootstrap/scss/breadcrumb";
-@import "node_modules/bootstrap/scss/pagination";
-@import "node_modules/bootstrap/scss/badge";
-@import "node_modules/bootstrap/scss/jumbotron";
-@import "node_modules/bootstrap/scss/alert";
-@import "node_modules/bootstrap/scss/progress";
-@import "node_modules/bootstrap/scss/media";
-@import "node_modules/bootstrap/scss/list-group";
-@import "node_modules/bootstrap/scss/close";
-@import "node_modules/bootstrap/scss/modal";
-@import "node_modules/bootstrap/scss/tooltip";
-@import "node_modules/bootstrap/scss/popover";
-@import "node_modules/bootstrap/scss/carousel";
-@import "node_modules/bootstrap/scss/utilities";
+@import "~bootstrap/scss/functions";
+@import "~bootstrap/scss/variables";
+@import "~bootstrap/scss/mixins";
+@import "~bootstrap/scss/print";
+@import "~bootstrap/scss/reboot";
+@import "~bootstrap/scss/type";
+@import "~bootstrap/scss/images";
+@import "~bootstrap/scss/code";
+@import "~bootstrap/scss/grid";
+@import "~bootstrap/scss/tables";
+@import "~bootstrap/scss/forms";
+@import "~bootstrap/scss/buttons";
+@import "~bootstrap/scss/transitions";
+@import "~bootstrap/scss/dropdown";
+@import "~bootstrap/scss/button-group";
+@import "~bootstrap/scss/input-group";
+@import "~bootstrap/scss/custom-forms";
+@import "~bootstrap/scss/nav";
+@import "~bootstrap/scss/navbar";
+@import "~bootstrap/scss/card";
+@import "~bootstrap/scss/breadcrumb";
+@import "~bootstrap/scss/pagination";
+@import "~bootstrap/scss/badge";
+@import "~bootstrap/scss/jumbotron";
+@import "~bootstrap/scss/alert";
+@import "~bootstrap/scss/progress";
+@import "~bootstrap/scss/media";
+@import "~bootstrap/scss/list-group";
+@import "~bootstrap/scss/close";
+@import "~bootstrap/scss/modal";
+@import "~bootstrap/scss/tooltip";
+@import "~bootstrap/scss/popover";
+@import "~bootstrap/scss/carousel";
+@import "~bootstrap/scss/utilities";
 
 
 // MDB Framework //
 
 //load all MDB Framework and add overrides as needed
-@import "node_modules/mdb-pro/sass/mdb/free/data/functions";
+@import "~mdb-pro/sass/mdb/free/data/functions";
 // Mixins
-@import "node_modules/mdb-pro/sass/mdb/free/data/prefixer";
-@import "node_modules/mdb-pro/sass/mdb/free/data/mixins";
+@import "~mdb-pro/sass/mdb/free/data/prefixer";
+@import "~mdb-pro/sass/mdb/free/data/mixins";
 
 // Variables
 @import "overrides/colors"; //TODO: check if more changes
-@import "node_modules/mdb-pro/sass/mdb/free/data/colors";
+@import "~mdb-pro/sass/mdb/free/data/colors";
 
 
-@import "node_modules/mdb-pro/sass/mdb/free/data/variables";
+@import "~mdb-pro/sass/mdb/free/data/variables";
 
 //Global
-@import "node_modules/mdb-pro/sass/mdb/free/global";
+@import "~mdb-pro/sass/mdb/free/global";
 
 // MDB Free
-//@import "node_modules/mdb-pro/sass/mdb/free/animations";
-@import "node_modules/mdb-pro/sass/mdb/free/helpers";
+//@import "~mdb-pro/sass/mdb/free/animations";
+@import "~mdb-pro/sass/mdb/free/helpers";
 @import "overrides/typography";
-@import "node_modules/mdb-pro/sass/mdb/free/buttons";
-@import "node_modules/mdb-pro/sass/mdb/free/cards-basic";
-@import "node_modules/mdb-pro/sass/mdb/free/dropdowns";
-@import "node_modules/mdb-pro/sass/mdb/free/navbar";
-@import "node_modules/mdb-pro/sass/mdb/free/pagination";
-@import "node_modules/mdb-pro/sass/mdb/free/badge";
-@import "node_modules/mdb-pro/sass/mdb/free/breadcrumb";
-@import "node_modules/mdb-pro/sass/mdb/free/modals";
-@import "node_modules/mdb-pro/sass/mdb/free/progress";
-@import "node_modules/mdb-pro/sass/mdb/free/carousel-basic";
-@import "node_modules/mdb-pro/sass/mdb/free/collapse";
-@import "node_modules/mdb-pro/sass/mdb/free/jumbotron";
-@import "node_modules/mdb-pro/sass/mdb/free/masks";
-@import "node_modules/mdb-pro/sass/mdb/free/waves";
-@import "node_modules/mdb-pro/sass/mdb/free/forms-basic";
-@import "node_modules/mdb-pro/sass/mdb/free/msc";
-@import "node_modules/mdb-pro/sass/mdb/free/footer";
-@import "node_modules/mdb-pro/sass/mdb/free/list-group";
-@import "node_modules/mdb-pro/sass/mdb/free/tables";
+@import "~mdb-pro/sass/mdb/free/buttons";
+@import "~mdb-pro/sass/mdb/free/cards-basic";
+@import "~mdb-pro/sass/mdb/free/dropdowns";
+@import "~mdb-pro/sass/mdb/free/navbar";
+@import "~mdb-pro/sass/mdb/free/pagination";
+@import "~mdb-pro/sass/mdb/free/badge";
+@import "~mdb-pro/sass/mdb/free/breadcrumb";
+@import "~mdb-pro/sass/mdb/free/modals";
+@import "~mdb-pro/sass/mdb/free/progress";
+@import "~mdb-pro/sass/mdb/free/carousel-basic";
+@import "~mdb-pro/sass/mdb/free/collapse";
+@import "~mdb-pro/sass/mdb/free/jumbotron";
+@import "~mdb-pro/sass/mdb/free/masks";
+@import "~mdb-pro/sass/mdb/free/waves";
+@import "~mdb-pro/sass/mdb/free/forms-basic";
+@import "~mdb-pro/sass/mdb/free/msc";
+@import "~mdb-pro/sass/mdb/free/footer";
+@import "~mdb-pro/sass/mdb/free/list-group";
+@import "~mdb-pro/sass/mdb/free/tables";
 
 // MDB Premium
-@import "node_modules/mdb-pro/sass/mdb/pro/variables-pro";
-@import "node_modules/mdb-pro/sass/mdb/free/deprecated";
-@import "node_modules/mdb-pro/sass/mdb/pro/deprecated";
-@import "node_modules/mdb-pro/sass/mdb/pro/buttons-pro";
-@import "node_modules/mdb-pro/sass/mdb/pro/social-buttons";
-@import "node_modules/mdb-pro/sass/mdb/pro/tabs";
-@import "node_modules/mdb-pro/sass/mdb/pro/cards-pro";
-@import "node_modules/mdb-pro/sass/mdb/pro/dropdowns-pro";
-@import "node_modules/mdb-pro/sass/mdb/pro/navbars-pro";
-@import "node_modules/mdb-pro/sass/mdb/pro/scrollspy";
-@import "node_modules/mdb-pro/sass/mdb/pro/light-box";
-@import "node_modules/mdb-pro/sass/mdb/pro/chips";
-@import "node_modules/mdb-pro/sass/mdb/pro/msc";
-@import "node_modules/mdb-pro/sass/mdb/pro/radio";
-@import "node_modules/mdb-pro/sass/mdb/pro/checkbox";
-@import "node_modules/mdb-pro/sass/mdb/pro/material-select";
-@import "node_modules/mdb-pro/sass/mdb/pro/switch";
-@import "node_modules/mdb-pro/sass/mdb/pro/file-input";
-@import "node_modules/mdb-pro/sass/mdb/pro/range";
-@import "node_modules/mdb-pro/sass/mdb/pro/input-group";
-@import "node_modules/mdb-pro/sass/mdb/pro/autocomplete";
-@import "node_modules/mdb-pro/sass/mdb/pro/parallax";
-@import "node_modules/mdb-pro/sass/mdb/pro/side-nav";
-@import "node_modules/mdb-pro/sass/mdb/pro/ecommerce";
-@import "node_modules/mdb-pro/sass/mdb/pro/carousels-pro";
-@import "node_modules/mdb-pro/sass/mdb/pro/stepper";
-@import "node_modules/mdb-pro/sass/mdb/pro/blog";
-@import "node_modules/mdb-pro/sass/mdb/pro/toasts";
-@import "node_modules/mdb-pro/sass/mdb/pro/animations-pro";
-@import "node_modules/mdb-pro/sass/mdb/pro/charts-pro";
-@import "node_modules/mdb-pro/sass/mdb/pro/progress";
-@import "node_modules/mdb-pro/sass/mdb/pro/scrollbar";
-//@import "node_modules/mdb-pro/sass/mdb/pro/skins"; // TODO: compare changes
+@import "~mdb-pro/sass/mdb/pro/variables-pro";
+@import "~mdb-pro/sass/mdb/free/deprecated";
+@import "~mdb-pro/sass/mdb/pro/deprecated";
+@import "~mdb-pro/sass/mdb/pro/buttons-pro";
+@import "~mdb-pro/sass/mdb/pro/social-buttons";
+@import "~mdb-pro/sass/mdb/pro/tabs";
+@import "~mdb-pro/sass/mdb/pro/cards-pro";
+@import "~mdb-pro/sass/mdb/pro/dropdowns-pro";
+@import "~mdb-pro/sass/mdb/pro/navbars-pro";
+@import "~mdb-pro/sass/mdb/pro/scrollspy";
+@import "~mdb-pro/sass/mdb/pro/light-box";
+@import "~mdb-pro/sass/mdb/pro/chips";
+@import "~mdb-pro/sass/mdb/pro/msc";
+@import "~mdb-pro/sass/mdb/pro/radio";
+@import "~mdb-pro/sass/mdb/pro/checkbox";
+@import "~mdb-pro/sass/mdb/pro/material-select";
+@import "~mdb-pro/sass/mdb/pro/switch";
+@import "~mdb-pro/sass/mdb/pro/file-input";
+@import "~mdb-pro/sass/mdb/pro/range";
+@import "~mdb-pro/sass/mdb/pro/input-group";
+@import "~mdb-pro/sass/mdb/pro/autocomplete";
+@import "~mdb-pro/sass/mdb/pro/parallax";
+@import "~mdb-pro/sass/mdb/pro/side-nav";
+@import "~mdb-pro/sass/mdb/pro/ecommerce";
+@import "~mdb-pro/sass/mdb/pro/carousels-pro";
+@import "~mdb-pro/sass/mdb/pro/stepper";
+@import "~mdb-pro/sass/mdb/pro/blog";
+@import "~mdb-pro/sass/mdb/pro/toasts";
+@import "~mdb-pro/sass/mdb/pro/animations-pro";
+@import "~mdb-pro/sass/mdb/pro/charts-pro";
+@import "~mdb-pro/sass/mdb/pro/progress";
+@import "~mdb-pro/sass/mdb/pro/scrollbar";
+//@import "~mdb-pro/sass/mdb/pro/skins"; // TODO: compare changes
 @import "overrides/skins";
 
-@import "node_modules/mdb-pro/sass/mdb/pro/date_picker/default";
-@import "node_modules/mdb-pro/sass/mdb/pro/date_picker/default.time";
-@import "node_modules/mdb-pro/sass/mdb/pro/date_picker/default.date";
+@import "~mdb-pro/sass/mdb/pro/date_picker/default";
+@import "~mdb-pro/sass/mdb/pro/date_picker/default.time";
+@import "~mdb-pro/sass/mdb/pro/date_picker/default.date";
 
-@import "node_modules/mdb-pro/sass/mdb/pro/sections";
-@import "node_modules/mdb-pro/sass/mdb/pro/sections/templates";
-@import "node_modules/mdb-pro/sass/mdb/pro/sections/features";
-@import "node_modules/mdb-pro/sass/mdb/pro/sections/social";
-@import "node_modules/mdb-pro/sass/mdb/pro/sections/blog";
-@import "node_modules/mdb-pro/sass/mdb/pro/sections/team";
-@import "node_modules/mdb-pro/sass/mdb/pro/sections/testimonials";
-@import "node_modules/mdb-pro/sass/mdb/pro/sections/projects";
-@import "node_modules/mdb-pro/sass/mdb/pro/sections/magazine";
-@import "node_modules/mdb-pro/sass/mdb/pro/sections/pricing";
-@import "node_modules/mdb-pro/sass/mdb/pro/sections/contacts";
+@import "~mdb-pro/sass/mdb/pro/sections";
+@import "~mdb-pro/sass/mdb/pro/sections/templates";
+@import "~mdb-pro/sass/mdb/pro/sections/features";
+@import "~mdb-pro/sass/mdb/pro/sections/social";
+@import "~mdb-pro/sass/mdb/pro/sections/blog";
+@import "~mdb-pro/sass/mdb/pro/sections/team";
+@import "~mdb-pro/sass/mdb/pro/sections/testimonials";
+@import "~mdb-pro/sass/mdb/pro/sections/projects";
+@import "~mdb-pro/sass/mdb/pro/sections/magazine";
+@import "~mdb-pro/sass/mdb/pro/sections/pricing";
+@import "~mdb-pro/sass/mdb/pro/sections/contacts";
 
-@import "node_modules/chartist/dist/scss/chartist.scss";
+
+@import "~chartist/dist/scss/chartist.scss";
+
+@import "~flipclock/src/flipclock/css/flipclock.css";
 
 @import "custom";
