--- a/src/assets/sass/_custom.scss
+++ b/src/assets/sass/_custom.scss
@@ -600,7 +600,7 @@ header .navbar .breadcrumb {
     border-bottom: dashed 1px $color-nav-sub2;
     display: block;
     width: 30%;
-    margin: 0 auto;
+    margin-left: auto;
     padding-top: 0px;
 }
 
@@ -885,6 +885,7 @@ input.md-form.addon {
 
 .profile-xl {
     border-radius: 50%;
+    max-width: 80%;
     border: 5px solid $white;
     text-align: center;
     display: block;
