--- a/src/assets/sass/_custom.scss
+++ b/src/assets/sass/_custom.scss
@@ -530,6 +530,31 @@ header .navbar .breadcrumb {
 
 .table {
     font-size: .9rem;
+    .new-order {
+        width: 90px;
+        text-align: center;
+        font-weight: 600;
+        &:before {
+            font-family: FontAwesome;
+            font-weight: 100;
+            font-size: 2.5rem;
+            line-height: .9rem;
+            display: block;
+            vertical-align: middle;    
+        }
+        &--down {
+            color: $color-cancel; 
+            &:before {
+                content: "\f107";
+            }
+        }
+        &--up {
+            color: $success-color;
+            &:before {
+                content: "\f106";
+            }
+        }
+    }
 }
 
 .table-title {
