--- a/src/assets/sass/overrides/_skins.scss
+++ b/src/assets/sass/overrides/_skins.scss
@@ -24,13 +24,6 @@ $sk-skin-btn-default: #293756;
             color: $sk-skin-accent;
         }
     }
-    img {
-        transition: .2s;
-        &:hover {
-            border: 2px solid $sk-skin-accent;
-            transition: .3s;
-        }
-    }
     .file-box a {
         color: $sk-skin-grey;
     }
@@ -42,8 +35,8 @@ $sk-skin-btn-default: #293756;
             }
         }
         td {
-            padding-top: 0;
-            padding-bottom: 0;
+            padding-top: .4rem;
+            padding-bottom: .4rem;
         }
     }
     .view {
@@ -106,7 +99,7 @@ $sk-skin-btn-default: #293756;
     }
     .profile-head {
         background-color: $color-nav-sub2;
-        margin-top: -15px;
+//        margin-top: -15px;
         margin-right: -15px;
     }
     .profile-head-clear {
@@ -756,6 +749,13 @@ $sk-skin-btn-default: #293756;
         .tasktype-1 {
             border-radius: 0.1rem;
             padding: 0px 5px;
+        }
+        a {
+            font-weight: 700;
+            text-transform: uppercase;
+            &:hover {
+                color: $color-sidebar !important;
+            }
         }
         .activity-item {
             border-top: 1px dashed lighten($sk-skin-accent, 20%);
