--- a/src/assets/sass/overrides/_skins.scss
+++ b/src/assets/sass/overrides/_skins.scss
@@ -677,6 +677,13 @@ $sk-skin-btn-default: #293756;
                     color: $sk-skin-accent;
                 }
             }
+            a {
+                font-weight: 500;
+                color: $gray-light;
+                &:hover {
+                    color: $sk-skin-accent;
+                }
+            }
         }
         h5 {
             font-size: .75rem;
@@ -697,7 +704,7 @@ $sk-skin-btn-default: #293756;
         }
     }
     .activity-day {
-        letter-spacing: -.08rem;
+        letter-spacing: -.03rem;
     }
     @media only screen and (max-width : 768px) {
         .activity {
@@ -972,13 +979,12 @@ $sk-skin-btn-default: #293756;
                     flex-direction: column;
                     border: 1px solid $white;
                     .quick-item-icon {
-                        width: 52px;
-                        display: block;
-                        margin: 0 auto;
-                        transition: .1s;
+                        color: $white;
+                        transition: .2s;
                         &:hover {
-                            width: 72px;
-                            transition: .3s;
+                            transform: scale(1.3);
+                            transition: .4s;
+                            color: $info-color;
                         }
                     }
                 }
