--- a/src/assets/sass/_custom.scss
+++ b/src/assets/sass/_custom.scss
@@ -540,10 +540,10 @@ header .navbar .breadcrumb {
             font-size: 2.5rem;
             line-height: .9rem;
             display: block;
-            vertical-align: middle;    
+            vertical-align: middle;
         }
         &--down {
-            color: $color-cancel; 
+            color: $color-cancel;
             &:before {
                 content: "\f107";
             }
@@ -1242,4 +1242,9 @@ input.md-form.addon {
 @keyframes spinnerDelayRotate {
     from {transform: rotate(0deg);}
     to {transform: rotate(359deg);}
+}
+
+.spinner-loading {
+  color: #92C100 !important;
+  position: relative;
 }
