--- a/src/assets/sass/_custom.scss
+++ b/src/assets/sass/_custom.scss
@@ -925,6 +925,11 @@ input.md-form.addon {
     height: 56px;
     border: 2px solid $white;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    transition: .5s;
+    &:hover {
+        transform: scale(2);
+        transition: .25s;
+    }
 }
 
 .profile-m-1 {
@@ -951,7 +956,6 @@ input.md-form.addon {
 
 .pos-rel {
     position: relative;
-
     label {
         margin-top: -.2rem;
     }
