Fixes from trello

--- a/src/assets/sass/_custom.scss
+++ b/src/assets/sass/_custom.scss
@@ -579,7 +579,7 @@ header .navbar .breadcrumb {
     &:last-child {
         border-top-right-radius: .9rem;
     }
-
+/*
     &:after {
         font-family: FontAwesome;
         content: "\f0dc";
@@ -588,7 +588,7 @@ header .navbar .breadcrumb {
         margin-left: 0.5rem;
         vertical-align: middle;
 
-    }
+    }*/
 }
 
 .table-display-1 {
