--- a/src/assets/sass/overrides/_skins.scss
+++ b/src/assets/sass/overrides/_skins.scss
@@ -1161,6 +1161,39 @@ $sk-skin-btn-default: #293756;
             padding-bottom: 15px;
         }
     }
+    .pagination {
+        li {
+            background-color: #fff;
+            border-radius: 4px;
+            margin-left: 7px;
+            &.active {
+                background-color: $info-color;  
+                a {
+                    color: #fff;
+                    &:hover {
+                        background-color: $info-color;    
+                    }
+                }
+            }
+            a {
+                display: inline-block;
+                width: 2rem;
+                height: 2rem;
+                text-align: center;
+                line-height: 2rem;
+                border-radius: 5px;
+                color: $gray-light; 
+                transition: .2s; 
+                &:hover {
+                    background-color: $gray-lighter;
+                    transition: .3s; 
+                }
+            }
+        } 
+    }
+    
+    
+    
     ///Charts--style
     .ct-series-a .ct-point, .ct-series-a .ct-line, .ct-series-a .ct-bar, .ct-series-a .ct-slice-donut {
         stroke: $sk-skin-accent;
