--- a/src/assets/sass/_custom.scss
+++ b/src/assets/sass/_custom.scss
@@ -381,8 +381,8 @@ header .dropdown-toggle {
         margin: 0 .3rem;
         border-radius: 50%;
         border: 2px solid $white;
-        max-width: 50px;
-        max-height: 50px;
+        width: 50px;
+        height: 50px;
     }
     &:after {
         content: none;
