--- a/src/assets/sass/_custom.scss
+++ b/src/assets/sass/_custom.scss
@@ -187,7 +187,7 @@ h6 {
         top: 20vh;
         width: 500px;
         border-radius: 2.5rem;
-        background-color: $color-mainpanel;
+        background-color: transparentize($color-mainpanel, 0.3);
         padding: 1.5rem;
 
         .form-header {
@@ -197,6 +197,10 @@ h6 {
             border-bottom-left-radius: 0px;
             border-bottom-right-radius: 0px;
             background-color: #D90000;
+            
+            &-reset {
+                margin-bottom: 1.5rem;
+            }
         }
     }
 
