--- a/src/assets/sass/_custom.scss
+++ b/src/assets/sass/_custom.scss
@@ -174,6 +174,22 @@ h6 {
     @extend .tasktype;
     background-color: $color-cancel;
 }
+.tasktype-4 {
+    @extend .tasktype;
+    background-color: $success-color;
+}
+.tasktype-5 {
+    @extend .tasktype;
+    background-color: $info-color;
+}
+.tasktype-6 {
+    @extend .tasktype;
+    background-color: $color-body_text;
+}
+
+
+
+
 
 ///Login
 
