--- a/src/assets/sass/_custom.scss
+++ b/src/assets/sass/_custom.scss
@@ -467,10 +467,11 @@ header .navbar .breadcrumb {
         content: "";
         width: 0;
         height: 0;
-        position: relative;
+        position: absolute;
         left: 45%;
+        bottom: 0;
         border-style: solid;
-        border-width: 0 10px 20px 10px;
+        border-width: 0 10px 12px 10px;
         border-color: transparent transparent $color-mainpanel transparent;
     }
 }
