--- a/src/assets/sass/overrides/_skins.scss
+++ b/src/assets/sass/overrides/_skins.scss
@@ -727,6 +727,7 @@ $sk-skin-btn-default: #293756;
         padding: 0;
         margin: 0;
         border: none;
+        min-width: 9.1rem;
     }
     .dropdown-box {
         background-color: $white;
@@ -752,18 +753,7 @@ $sk-skin-btn-default: #293756;
         min-width: 350px;
         position: relative;
         margin-left: -151px;
-        margin-right: -73px;
-        &:before {
-            content: "";
-            width: 0;
-            height: 0;
-            border-style: solid;
-            border-width: 0 12px 12px 12px;
-            border-color: transparent transparent #ffffff transparent;
-            position: absolute;
-            top: -12px;
-            left: 45%;
-        }
+        margin-right: -55px;
         .activity-container {
             max-height: 60vh;
             overflow: hidden;
@@ -792,7 +782,7 @@ $sk-skin-btn-default: #293756;
                 &:before {
                     @extend .dropdown-arrow;
                     top: -12px;
-                    left: 45%;
+                    left: 47%;
                 }
             }
             &:hover {
@@ -993,6 +983,7 @@ $sk-skin-btn-default: #293756;
                     display: flex;
                     flex-direction: column;
                     border: 1px solid $white;
+                    border-radius: .5rem;
                     .quick-item-icon {
                         color: $white;
                         transition: .2s;
@@ -1022,6 +1013,7 @@ $sk-skin-btn-default: #293756;
     .card-box {
         padding: 30px;
         .card-title {
+            color: $gray;
             &:hover {
                 color: $info-color;
             }
