--- a/src/assets/sass/_custom.scss
+++ b/src/assets/sass/_custom.scss
@@ -1187,18 +1187,19 @@ input.md-form.addon {
 ////////// Spiner
 
 .loading-motion {
-    width: 100vw;
-    height: 100vh;
+    width: 50vw;
+    height: 50vh;
     background-color: rgba(255,255,255,.85);
     position: absolute;
-    top: 0;
+    top: 25%;
+    left: 25%;
     margin-left: -15px;
     z-index: 9999;
     display: flex;
     align-items: center;
     .spinner {
-        width: 60px;
-        height: 60px;
+        width: 80px;
+        height: 80px;
         background-color: $sk-skin-accent;
         margin: 0 auto;
         -webkit-animation: sk-rotateplane 1.2s infinite ease-in-out;
