--- a/src/assets/sass/overrides/_skins.scss
+++ b/src/assets/sass/overrides/_skins.scss
@@ -41,6 +41,8 @@ $sk-skin-btn-default: #293756;
             border-radius: 11rem;
             padding: .2rem 2rem .2rem 1.5rem;
             margin-right: 1rem;
+            text-transform: uppercase;
+            font-size: 0.8rem;
         }
     }
     table.table { 
