--- a/src/assets/sass/_custom.scss
+++ b/src/assets/sass/_custom.scss
@@ -1099,6 +1099,12 @@ input.md-form.addon {
     font-size: 2.4rem;
 }
 
+.btn-complete-icon:before {
+    @extend .btn-icons;
+    content: "\f00c";
+    font-size: 2.4rem;
+}
+
 .btn-start-icon:before {
     @extend .btn-icons;
     content: "\f144";
