--- a/src/assets/sass/overrides/_skins.scss
+++ b/src/assets/sass/overrides/_skins.scss
@@ -1181,12 +1181,14 @@ $sk-skin-btn-default: #293756;
     .pagination {
         li {
             background-color: #fff;
-            border-radius: 4px;
+            border-radius: 5px;
             margin-left: 7px;
             &.active {
                 background-color: $info-color;  
                 a {
                     color: #fff;
+                    box-shadow: none;
+                    background-color: $info-color;
                     &:hover {
                         background-color: $info-color;    
                     }
@@ -1197,10 +1199,11 @@ $sk-skin-btn-default: #293756;
                 width: 2rem;
                 height: 2rem;
                 text-align: center;
-                line-height: 2rem;
+                line-height: 1rem;
                 border-radius: 5px;
                 color: $gray-light; 
                 transition: .2s; 
+                
                 &:hover {
                     background-color: $gray-lighter;
                     transition: .3s; 
