Transparent loading button style

--- a/src/assets/sass/_custom.scss
+++ b/src/assets/sass/_custom.scss
@@ -1283,7 +1283,7 @@ input.md-form.addon {
 }
 
 .spinner-loading {
-  color: #92C100 !important;
+  color: transparent !important;
   position: relative;
 }
 .spinner-loading-blue {
