--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -656,4 +656,6 @@ $pre-color:                   $gray-dark !default;
 $pre-border-color:            #ccc !default;
 $pre-scrollable-max-height:   340px !default;
 
+$sidenav-breakpoint: 1200px !default;
+
 
