--- a/src/assets/sass/_custom.scss
+++ b/src/assets/sass/_custom.scss
@@ -895,6 +895,10 @@ form .form-group {
     margin-bottom: 15px;
 }
 
+.md-form.addon--small {
+    margin-bottom: -5px;
+}
+
 .md-form {
     margin-bottom: 2.2rem;
 }
