--- a/src/assets/sass/overrides/_skins.scss
+++ b/src/assets/sass/overrides/_skins.scss
@@ -305,6 +305,11 @@ $sk-skin-btn-default: #293756;
         top: 5px;
         position: relative;
         box-shadow: none;
+        &--small {
+            @extend .btn-addon;
+            top: -2px;
+            height: 50px;
+        }
     }
     .btn-save-small {
         cursor: pointer;
@@ -364,13 +369,12 @@ $sk-skin-btn-default: #293756;
     }
     input[type=value],
     input::placeholder {
-        color: #ccc;
+        color: #ccc; 
     }
     input[type="email"],
     input[type="tel"],
     input[type="search"],
     input[type="number"],
-    textarea.md-textarea,
     input[type="text"],
     input[type="password"],
     input[type="time-input"] {
@@ -385,10 +389,18 @@ $sk-skin-btn-default: #293756;
         text-align: center;
         height: 3rem;
     }
+    textarea.md-textarea {
+        background-color: $white;
+        border-radius: .4rem;
+        border: 1px solid lighten($color-sidebar, 70%);
+        box-sizing: border-box;
+        padding: 1rem 1rem 3rem 1rem;
+        height: 7.8rem;
+        resize: vertical;
+    }
     input[type="email"]:focus:not([readonly]),
     input[type="tel"]:focus:not([readonly]),
     input[type="search"]:focus:not([readonly]),
-    textarea.md-textarea:focus:not([readonly]),
     input[type="text"]:focus:not([readonly]),
     input[type="number"]:focus:not([readonly]),
     input[type="password"]:focus:not([readonly]),
