--- a/src/assets/sass/overrides/_skins.scss
+++ b/src/assets/sass/overrides/_skins.scss
@@ -369,7 +369,7 @@ $sk-skin-btn-default: #293756;
     }
     input[type=value],
     input::placeholder {
-        color: #ccc; 
+        color: #ccc;
     }
     input[type="email"],
     input[type="tel"],
@@ -788,7 +788,7 @@ $sk-skin-btn-default: #293756;
         margin-right: -70px;
         .activity-container {
             max-height: 60vh;
-            overflow: hidden;
+            overflow: scroll;//FIX to enable scroll in notifications
         }
         .tasktype-1,
         .tasktype-2,
